[package]
name = "bits-link-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bits-link-common = { path = "../bits-link-common" }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
futures = "0.3"
